# FlagGems

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_cn.md  GOVERNANCE.md  GOVERNANCE_cn.md  MAINTAINERS.md  README.md  benchmark_v22_results.json  benchmark_v22_results.yaml  benchmark_v500_results.yaml  pyproject.toml  setup.py  setup.sh
.devcontainer/: README.md
.devcontainer/common/scripts/: install-flaggems.sh
.devcontainer/hygon/: Dockerfile  devcontainer.json  flaggems.env
.devcontainer/iluvatar/: Dockerfile  devcontainer.json  flaggems.env
.devcontainer/iluvatar/scripts/: install-dev-tools.sh
.devcontainer/metax/: Dockerfile  devcontainer.json  flaggems.env
.devcontainer/metax/scripts/: install-dev-tools.sh
.devcontainer/mthreads/: Dockerfile  devcontainer.json  flaggems.env
.devcontainer/mthreads/scripts/: install-dev-tools.sh
.devcontainer/nvidia/: Dockerfile  devcontainer.json  flaggems.env
.devcontainer/nvidia/scripts/: .install-dev-tools.sh.swp  install-dev-tools.sh
.github/: CODEOWNERS  backends.json
.github/actions/checkout-retry/: action.yml
.github/actions/setup-flaggems/: action.yml
.github/configs/weekly/: 910B.yml  BW1000.yml  H800.yml  MTT-S5000.yml
.github/workflows/: backend-test.yaml  command.yaml  coverage.yaml  cpp-op-test.yaml  daily.yaml  hugo-site.yaml  linter.yml  random-test.yaml  release.yaml  sync-docs.yaml  unittest.yaml  weekly.yaml
benchmark/: base.py  conftest.py  consts.py  core_shapes.yaml  performance_utils.py  test_Concat.py  test_acos.py  test_acosh.py  test_adaptive_avg_pool2d.py  test_adaptive_max_pool3d_backward.py  test_add.py  test_add_rms_norm.py  test_addcdiv.py  test_addcdiv_.py  test_addcmul.py  test_addcmul_.py  test_addmm.py  test_addmm_.py  test_addmv.py  test_all.py  test_allclose.py  test_alpha_dropout.py  test_amax.py  test_amin.py  test_aminmax.py  test_amp_foreach_non_finite_check_and_unscale_.py  test_angle.py  test_any.py  test_arange.py  test_arcsin.py  test_arctanh.py  test_argmax.py  test_argsort.py  test_asin.py  test_atan.py  test_atan2.py  test_atanh.py  test_atanh_.py  test_avg_pool2d.py  test_baddbmm.py  (+273 more)
benchmark/test_FLA/: test_chunk_gated_delta_rule_fwd.py
cmake/: BackendHCU.cmake  BackendMACA.cmake
conf/: operators.yaml
container/: flaggems-ascend-8.5.0  flaggems-ascend-9.0.0  flaggems-cambricon-4.4.3  flaggems-enflame-1.9.10  flaggems-hygon-26.04  flaggems-iluvatar-4.4.0  flaggems-kunlunxin-5.29.0  flaggems-metax-3.7.2.1  flaggems-mthreads-4.3.6  flaggems-nvidia-12.8  flaggems-nvidia-13.3  flaggems-tsingmicro-260614
docs/: .gitignore
docs/coverage/20260308-manual/: class_index.html  function_index.html  index.html  status.json  z_029a114bb7d0be98___init___py.html  z_061df123ec123988___init___py.html  z_061df123ec123988_fused_add_rms_norm_py.html  z_0957b741f6c1fbf0___init___py.html  z_0957b741f6c1fbf0_apply_repetition_penalties_py.html  z_0957b741f6c1fbf0_concat_and_cache_mla_py.html  z_0957b741f6c1fbf0_cross_entropy_loss_py.html  z_0957b741f6c1fbf0_cutlass_scaled_mm_py.html  z_0957b741f6c1fbf0_flash_mla_py.html  z_0957b741f6c1fbf0_fused_add_rms_norm_py.html  z_0957b741f6c1fbf0_geglu_py.html  z_0957b741f6c1fbf0_gelu_and_mul_py.html  z_0957b741f6c1fbf0_grouped_topk_py.html  z_0957b741f6c1fbf0_instance_norm_py.html  z_0957b741f6c1fbf0_moe_align_block_size_py.html  z_0957b741f6c1fbf0_moe_sum_py.html  z_0957b741f6c1fbf0_outer_py.html  z_0957b741f6c1fbf0_reglu_py.html  z_0957b741f6c1fbf0_reshape_and_cache_flash_py.html  z_0957b741f6c1fbf0_reshape_and_cache_py.html  z_0957b741f6c1fbf0_rotary_embedding_py.html  z_0957b741f6c1fbf0_rwkv_ka_fusion_py.html  z_0957b741f6c1fbf0_rwkv_mm_sparsity_py.html  z_0957b741f6c1fbf0_silu_and_mul_py.html  z_0957b741f6c1fbf0_skip_layernorm_py.html  z_0957b741f6c1fbf0_swiglu_py.html  z_0957b741f6c1fbf0_topk_softmax_py.html  z_0957b741f6c1fbf0_weight_norm_py.html  z_1013c810f26bf9e1___init___py.html  z_1121d7012b70ac4b___init___py.html  z_1121d7012b70ac4b_add_py.html  z_1121d7012b70ac4b_gelu_py.html  z_180569f6dcc1fe09___init___py.html  z_180569f6dcc1fe09_patch_util_py.html  z_180569f6dcc1fe09_patch_vllm_all_py.html  z_1c3455d62cc89b04___init___py.html  (+925 more)
docs/coverage/20260309/: status.json  z_061df123ec123988_fused_add_rms_norm_py.html  z_0957b741f6c1fbf0___init___py.html  z_0957b741f6c1fbf0_flash_mla_py.html  z_0957b741f6c1fbf0_fused_add_rms_norm_py.html  z_0957b741f6c1fbf0_geglu_py.html  z_0957b741f6c1fbf0_moe_sum_py.html  z_0957b741f6c1fbf0_reshape_and_cache_flash_py.html  z_0957b741f6c1fbf0_reshape_and_cache_py.html  z_0957b741f6c1fbf0_rwkv_ka_fusion_py.html  z_1121d7012b70ac4b_add_py.html  z_1121d7012b70ac4b_gelu_py.html  z_180569f6dcc1fe09_patch_vllm_all_py.html  (+240 more)
hugo-docs/data/: operators.yaml
include/flag_gems/: backend_utils.h  operators.h
lib/: CMakeLists.txt  act_quant.cpp  exponential_.cpp  flash_attn_varlen_func.cpp  gemma_rms_norm.cpp
src/flag_gems/: __init__.py  _setup.py  backends.yaml  config.py
tests/: accuracy_utils.py  conftest.py  test.sh  test_Concat.py  test_acosh.py  test_act_quant.py  test_adaptive_avg_pool2d.py  test_adaptive_max_pool3d_backward.py  test_add.py  test_add_rms_norm.py  test_addcdiv.py  test_addcdiv_.py  test_addcmul.py  test_addcmul_.py  test_addmm.py  test_addmm_.py  test_affine_grid_generator.py  test_alpha_dropout.py  test_amin.py  test_amp_foreach_non_finite_check_and_unscale_.py  test_angle.py  test_apply_repetition_penalties.py  test_apply_rotary_pos_emb.py  test_arange.py  test_arange_start.py  test_arcsin.py  test_argsort.py  test_as_strided_copy.py  test_asin.py  test_asinh.py  test_assert_async.py  test_atanh.py  test_atanh_.py  test_avg_pool3d.py  test_backend_heuristics.py  test_baddbmm.py  test_batch_norm_no_update.py  test_beam_search_score.py  test_bernoulli.py  test_bincount.py  (+244 more)
tests/test_DSA/: test_sparse_mla_ops.py
tests/test_FLA/: test_chunk_gated_delta_rule_fwd.py
tools/: env.sh  gpu_check_ascend.sh  gpu_check_cambricon.sh  gpu_check_enflame.sh  gpu_check_sunrise.sh  run_tests.py  test-op-experimental.sh  test-op.sh  vendor.sh
(+22562 files in other folders)
