[build-system]
# The cmake and ninja packages are not supposed to be listed in build-system.requires.
# The version expectation is "cmake>=3.20,<4.0", "ninja==1.13.0".
# They must be installed separately for `--no-build-isolation` to work.
requires = ["setuptools>=64.0,<80.0", "scikit-build-core==0.12.2", "pybind11==3.0.3"]

build-backend = "scikit_build_core.build"

[project]

name = "flag_gems"

version = "5.4.0dev"

description = "FlagGems is a function library written in Triton language."

readme = { file = "README.md", content-type = "text/markdown" }

requires-python = ">=3.10.0"

license = { text = "Apache Software License" }

authors = [
    { name = "Zhixin Li", email = "strongspoon@outlook.com" },
    { name = "Tongxin Bai", email = "waffle.bai@gmail.com" },
    { name = "Yuming Huang", email = "jokmingwong@gmail.com" },
    { name = "Feiyu Chen", email = "iclementine@outlook.com" },
    { name = "Ruilin Yang", email = "rlyanger01@gmail.com"},
    { name = "Zhen Wang", email = "516310189@qq.com"},
    { name = "Hui Guo", email = "sunnycase@live.cn"},
    { name = "Xiaoyan Liu", email = "18811205590@163.com"},
    { name = "Chunlie Men", email = "menchunlei@163.com"},
    { name = "Hang Xiao", email = "vincent.xiao.me@gmail.com"},
    { name = "Yiqun Huang", email = "huangyiqun@mail.bnu.edu.cn"},
    { name = "Jinjin Tian", email = "kiddyjinjin@gmail.com"},
    { name = "Yang Zheng", email = "zhengyang_pku@163.com"},
    { name = "Jinjie Liu", email = "sgjzfzzf@gmail.com"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "packaging==26.0",
    "PyYAML==6.0.1",
    "sqlalchemy==2.0.48",
    "numpy==1.26.4",
]

[project.optional-dependencies]

ascend-cann850 = [
    "torch==2.9.0+cpu",
    "torch-npu==2.9.0",
    "flagtree==0.5.0+ascend3.2",
]

ascend-cann900 = [
    "torch==2.10.0+cpu",
    "torch-npu==2.10.0",
    "triton==3.5.0",
    # "triton-ascend==3.2.1",
]

cambricon = [
    "cambricon_dali==0.13.0",
    "torch==2.7.1+cpu",
    "torch-mlu==1.29.2+torch2.7.1",
    "torch-mlu-ops==1.8.0+torch2.7.1",
    "triton==3.2.0+mlu1.7.2",
]

enflame = [
    "pyefml==1.9.10",
    "torch==2.10.0+cpu",
    "torchaudio==2.10.0+cpu",
    "torchvision==0.25.0+cpu",
    "torch-gcu==2.10.0+3.7.20260408",
    "triton-gcu==3.6.0+1.0.20260521.cc.1.9.10",
    "flash-attn==2.7.2+torch.2.9.1.gcu.3.4.20260323",
    #"flagtree==0.5.0+enflame.gitadb592d5",
]

hygon = [
    "torch==2.9.0+das.opt1.dtk2604",
    "flagtree==0.5.0+hcu3.0",
]

iluvatar = [
    "torch==2.7.1+corex.4.4.0",
    "torchaudio==2.7.1+corex.4.4.0",
    "torchvision==0.22.1+corex.4.4.0",
    "triton==3.1.0+corex.4.4.0",
    # "flagtree==0.5.1+iluvatar3.1"
]

kunlunxin = [
    "apex==0.1",
    "benchflow==1.0.0",
    "colorama==0.4.6",
    "flash_attn==2.4.2+7e2dd4d",
    "hydrax==0.1.0",
    "hyperparameter==0.5.6",
    "psutil==6.1.0",
    "regex==2026.4.4",
    "torch==2.9.0+cu129",
    "torchaudio==2.9.0+cu129",
    "torchvision==0.24.0+cu129",
    "torch_plugin==0.1.0",
    "torch_xray==2.0.4",
    "xformers==0.0.29+1e7a8ec.d20260114",
    "xmlir==1.0.0.1",
    # Triton cannot be installed with torch
    # because torch requires triton==3.5.0
    # "triton==3.0.0+a48aedef",
]

metax = [
    "torch==2.8.0+metax3.7.2.0",
    "torchaudio==2.4.1+metax3.7.2.0",
    "torchvision==0.15.1+metax3.7.2.0",
    "flagtree==3.1.0+metax3.7.2.0",
    "flash_attn==2.6.3+metax3.7.2.0torch2.8",
    # "triton==3.0.0+metax3.7.2.0",
]

mthreads = [
    "torch==2.9.0+musa.4.3.6",
    "torch_musa==2.9.0",
    "triton==3.6.0+git89458660",
    "mkl==2024.0.0",
    # "flagtree==0.5.1+mthreads3.6",
]

nvidia = [
    "torch==2.11.0+cu130",
    "torchvision==0.26.0+cu130",
    "triton==3.6.0",
    # "flagtree==0.5.1+3.6",
]

spacemit = [
    "torch==2.8.0+spacemit.0",
    "triton==3.6.0+spacemit.a5",
]

sunrise = [
    "torch==2.11.0+cpu",
    "torchaudio==2.11.0+cpu",
    "torchvision==0.26.0+cpu",
    "torch-ptpu==0.2.1+gaf2c267.torch2.11",
    "triton==3.4.0.6+gite4f6d6e4",
    # "flagtree-0.4.0+sunrise3.4"
]

thead = [
    "torch==2.9.0+ppu2.0.0.oe",
    "triton==3.5.0+ppu2.0.0.oe",
]


tsingmicro = [
    "torch==2.7.0+cpu",
    "torchvision==0.22.0+cpu",
    "torchaudio==2.7.0+cpu",
    "torch_txda==0.1.0+20260610.3968e515",
    "txops==0.1.0+20260508.60287151",
    "flagtree==0.5.0.post20260612+git705a4064",
    # "flagtree==0.5.0+tsingmicro3.3",
    # "triton==3.3.0+git2e9c1195",
]

# Test packages
test = [
    "distro==1.9.0",
    "coverage==7.13.5",
    "gitpython==3.1.50",
    "openpyxl==3.1.5",
    "pytest==9.0.3",
    "pytest-md-report==0.8.0",
    "scipy>=1.15.3",
]

# Package for running example tests
example = [
    "transformers>=4.40.2",
]

[project.urls]

Repository = "https://github.com/flagos-ai/FlagGems"
Documentation = "https://flagos-ai.github.io/FlagGems"
"Bug Tracker" = "https://github.com/flagos-ai/FlagGems/issues"

[tool.setuptools.packages.find]

where = ["src"]

[tool.setuptools.package-data]

"flag_gems.runtime" = ["*/**/*.yaml"]

[tool.scikit-build]

build.verbose = true
logging.level = "INFO"
wheel.install-dir = "flag_gems"
build-dir = "build/{cache_tag}"

[tool.uv]

# Tell 'uv' that each index has an equal importance for each package,
# in other words, don't treat the first index with a matching package
# as the best one.
index-strategy = "unsafe-best-match"
